add_subdirectory(AccumulatePass)
add_subdirectory(Antialiasing)
add_subdirectory(BlitPass)
add_subdirectory(BSDFViewer)
add_subdirectory(CSM)
add_subdirectory(DebugPasses)
add_subdirectory(DepthPass)
add_subdirectory(DLSSPass)
add_subdirectory(ErrorMeasurePass)
add_subdirectory(FLIPPass)
add_subdirectory(ForwardLightingPass)
add_subdirectory(GBuffer)
add_subdirectory(ImageLoader)
add_subdirectory(MinimalPathTracer)
add_subdirectory(ModulateIllumination)
add_subdirectory(NRDPass)
add_subdirectory(OptixDenoiser)
add_subdirectory(PathTracer)
add_subdirectory(PixelInspectorPass)
add_subdirectory(RTXDIPass)
add_subdirectory(RTXGIPass)
add_subdirectory(SceneDebugger)
add_subdirectory(SDFEditor)
add_subdirectory(SimplePostFX)
add_subdirectory(SkyBox)
add_subdirectory(SSAO)
add_subdirectory(SVGFPass)
add_subdirectory(TemporalDelayPass)
add_subdirectory(TestPasses)
add_subdirectory(ToneMapper)
add_subdirectory(Utils)
add_subdirectory(WhittedRayTracer)
